# platform.upstream.libfontenc

./: .gitignore  ChangeLog  Makefile.am  autogen.sh  configure.ac  fontenc.pc.in  libfontenc-1.1.1.tar.bz2.delta  libfontenc-1.1.1.tar.bz2.id  project.config
debian/: changelog  control  libfontenc-dev.install  rules
encodings/: .gitignore  Makefile.am
encodings/large/: Makefile.am
include/X11/fonts/: fontenc.h
packaging/: libfontenc.spec
src/: .cvsignore  Makefile.am  encparse.c  fontenc.c  fontencI.h
